syntax = "proto3";

package car.v1;

option go_package = "github.com/jp-ryuji/go-arch-patterns/api/generated/car/v1;carv1";

import "google/protobuf/timestamp.proto";

// Car represents a car entity
message Car {
  string id = 1;
  string tenant_id = 2;
  string model = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
